fixinks
Android studion errorien korjaamista ja sen toimimaan saaminen